# SecretSimpleVote

./: .gitignore  Cargo.toml  Makefile  README.md
src/: contract.rs
ui/: package.json
ui/src/: App.css  App.js
