[package]
name = "secret-voting"
version = "0.0.1"
authors = ["Enigma <info@enigma.co>"]
edition = "2018"
description = "A Simple Secret Voting App"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
schemars = "0.7"
serde = { version = "1.0.114", default-features = false, features = [
    "derive",
    "alloc"
] }
bincode2 = "2.0.1"
